style: fix menu styles on mobile devices

--- a/components/user/interface/UserInterface.module.scss
+++ b/components/user/interface/UserInterface.module.scss
@@ -10,7 +10,7 @@
 
   &.mobileOpen {
     @include screen($size: mobile) {
-      height: 100vh;
+      height: $full-size;
       overflow-y: scroll;
     }
   }
